--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,3 +215,14 @@ input[type=submit] {
   background: #4aaaa5;
   border: 0 none;
 }
+
+
+@media screen and (max-width: 980px) {
+  #main-container {
+    width: 60%;
+    height: 60px;
+    margin-left: 0;
+  }
+ 
+}
+
